# machine_learning

./: .gitignore  README.md  pyproject.toml
ml_math_coursera/c1_linear_algebra/week1/: C1_W1_Lab_1_introduction_to_numpy_arrays.ipynb  C1_W1_Lab_2_linear_systems_as_matrices.ipynb  L1_introduction_to_numpy_arrays.ipynb  L1_practice.ipynb  L1_practice_2.ipynb  L2_linear_systems_as_matrices.ipynb  L2_practice.ipynb  L2_solving_linear_systems_2_variables.ipynb  utils.py
ml_math_coursera/c1_linear_algebra/week2/: Assignment.ipynb  C1w2_ungraded_lab.ipynb  L1_practice.ipynb  L1_solving_linear_systems_3_variables.ipynb
ml_math_coursera/c1_linear_algebra/week3/: L1_practice.ipynb  L1_vector_operations.ipynb  L2_matrix_multiplication.ipynb  L2_practice.ipynb  L3_linear_transformations.ipynb
ml_math_coursera/c1_linear_algebra/week4/: C1_W4_Assignment.ipynb  C1_W4_Lab_1_Interpreting_eigenvalues_and_eigenvectors.ipynb
ml_specialization/c1_supervised_learning/week_2_multiple_regression/: C1_W2_Lab05_Sklearn_GD_Soln.ipynb  C1_W2_Lab06_Sklearn_Normal_Soln.ipynb
ml_specialization/c1_supervised_learning/week_3_classification/: C1_W3_Lab01_Classification_Soln.ipynb  C1_W3_Lab02_Sigmoid_function_Soln.ipynb  C1_W3_Lab03_Decision_Boundary_Soln.ipynb  C1_W3_Lab04_LogisticLoss_Soln.ipynb  C1_W3_Lab05_Cost_Function_Soln.ipynb  C1_W3_Lab06_Gradient_Descent_Soln.ipynb  C1_W3_Lab07_Scikit_Learn_Soln.ipynb  C1_W3_Lab08_Overfitting_Soln.ipynb  C1_W3_Lab09_Regularization_Soln.ipynb  plt_one_addpt_onclick.py
ml_with_python_ll/04_k_means_clustering/: k_means_clustering.ipynb
(+50 files in other folders)
